The time is updated

--- a/index.html
+++ b/index.html
@@ -16,12 +16,8 @@
         <h1 id="city">
         </h1>
         <ul>
-            <li>
-              Wednesday 11:00  
-            </li>
-            <li id="description">
-                Clear
-            </li>
+            <li> Last updated: <span id="date"></span> </li>
+            <li id="description"></li>
         </ul>
     </div>
         <div class="row">
